New progress bar

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     </div>
 
     <section class="main">
+      <progress id="progress" class="progress" value="0" max="100"> </progress>
       <div class="main-nav">
         <div class="search-container">
           <div class="left-icons">
@@ -133,97 +134,6 @@
           </div>
         </div>
       </div>
-
-      <!-- <div class="media-scroller">
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-      </div>
-      <div class="media-scroller">
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-      </div>
-      <div class="media-scroller">
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-      </div>
-      <div class="media-scroller">
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-      </div>
-      <div class="media-scroller">
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-        <img src="cover/cover1.jpg" alt="" class="item"/>
-      </div> -->
 
       <div class="media-scroller col1" id="media-scrol ">
         <div class="item-container">
