Started Deezer API integration

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <script src="index.js"></script>
+    <script src="api.js"></script>
     <title>Music Player</title>
   </head>
   <body>
